_kubernetes_setup/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: curlimages/curl:latest
    command: ["/bin/sh", "-c", "while true; do sleep 30; done"]
